--- a/socialmedia.html
+++ b/socialmedia.html
@@ -10,27 +10,39 @@
 </head>
 
 <body style="background-color: #180e0b; color: #d77261;">
-<style>
-    /* Mobile-friendly line numbers */
-@media (max-width: 768px) {
-    #left {
-        width: 40px;  /* छोटा sidebar */
-        display: block;
-    }
+    <style>
+        /* Mobile-friendly line numbers */
+        @media (max-width: 768px) {
+            #left {
+                width: 40px;
+                /* छोटा sidebar */
+                display: block;
+            }
 
-    #linenumbers {
-        font-size: 10px; /* छोटे numbers */
-        color: #646f72;
-        text-align: right;
-        line-height: 1.2em;
-        padding-right: 3px;
-    }
+            #linenumbers {
+                font-size: 10px;
+                /* छोटे numbers */
+                color: #646f72;
+                text-align: right;
+                line-height: 1.2em;
+                padding-right: 3px;
+            }
 
-    #content {
-        margin-left: 50px; /* content shift थोड़ा */
-    }
-}
-</style>
+            #content {
+                margin-left: 50px;
+                /* content shift थोड़ा */
+            }
+
+            .name-set a {
+                position: absolute;
+                margin-left: 100px;
+                margin-top: -30px;
+                color: white;
+                text-decoration: none;
+                font-size: 20px !important;
+            }
+        }
+    </style>
 
     <div id="left">
         <div id="linenumbers"></div>
@@ -66,7 +78,7 @@
         <!-- Single Photo -->
         <img src="images/ramizdivilface.jpeg" class="profile-photo">
         <br><br>
-        <p>
+        <p class="name-set">
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=loveramiz7872@gmail.com" class="email-link"
                 target="_blank">
                 Ryuga Yagami
@@ -122,8 +134,8 @@
             So join me in this journey, because this is not just my page…
             this is an open chapter of my story.”*
         </p>
-        🔗 <a href="https://www.facebook.com/share/1HzEJNX1P1/?mibextid=wwXIfr" style="color: red"
-            target="_blank">Facebook</a> |
+        🔗 <a href=" https://www.facebook.com/share/1HzEJNX1P1/?mibextid=wwXIfr" style="color: red" target="_blank">
+            Facebook</a> |
         </p>
         <br><br>
         <p>
