--- a/secret.html
+++ b/secret.html
@@ -5,31 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music</title>
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body style="background-color: #180e0b; color: #d77261;">
-<style>
-    /* Mobile-friendly line numbers */
-@media (max-width: 768px) {
-    #left {
-        width: 40px;  /* छोटा sidebar */
-        display: block;
-    }
+    <style>
+        /* Mobile-friendly line numbers */
+        @media (max-width: 768px) {
+            #left {
+                width: 40px;
+                /* छोटा sidebar */
+                display: block;
+            }
 
-    #linenumbers {
-        font-size: 10px; /* छोटे numbers */
-        color: #646f72;
-        text-align: right;
-        line-height: 1.2em;
-        padding-right: 3px;
-    }
+            #linenumbers {
+                font-size: 10px;
+                /* छोटे numbers */
+                color: #646f72;
+                text-align: right;
+                line-height: 1.2em;
+                padding-right: 3px;
+            }
 
-    #content {
-        margin-left: 50px; /* content shift थोड़ा */
-    }
-}
-</style>
+            #content {
+                margin-left: 50px;
+                /* content shift थोड़ा */
+            }
+
+            .Text input {
+
+                width: 110px;
+                color: #d77261;
+
+            }
+
+
+
+        }
+    </style>
     <div id="left">
         <div id="linenumbers"></div>
     </div>
@@ -62,9 +76,9 @@
         <h1>Secret Section</h1>
 
         <img src="images/secret.jpg" width='240' height='240'>
-        <div id="Text">
+        <div class="Text">
             "password"
-            <input id="fuck" width="48" type="password" name="p4ss" value autofocus>
+            <input id="fuck" " type=" password" name="p4ss" value autofocus>
             <br>
         </div>
         <script>
@@ -74,7 +88,7 @@
             }
             document.getElementById("linenumbers").innerHTML = nums;
         </script>
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
