Updated index.html and sound

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Sound effect -->
     <audio id="boomSound">
-        <source src="media/Kangaroo.wav" type="audio/wav">
+        <source src="media/Kangaroo.mp3" type="audio/mp3">
     </audio>
 
     <script>
