--- a/index.html
+++ b/index.html
@@ -5,32 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kangaroo Intro</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #000;
-            /* black background for stylish look */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            /* full screen */
-        }
+    <!-- Favicon -->
+    <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
 
-        .kangaroo {
-            max-width: 60%;
-            height: auto;
-            cursor: pointer;
-            /* hover पर pointer दिखे */
-            transition: transform 0.3s ease;
-        }
+    <!-- App Icons -->
+    <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512.png">
 
-        .kangaroo:hover {
-            transform: scale(1.1);
-            /* hover पर zoom effect */
-        }
-    </style>
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json">
+</head>
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: #000;
+        /* black background for stylish look */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        /* full screen */
+    }
+
+    .kangaroo {
+        max-width: 60%;
+        height: auto;
+        cursor: pointer;
+        /* hover पर pointer दिखे */
+        transition: transform 0.3s ease;
+    }
+
+    .kangaroo:hover {
+        transform: scale(1.1);
+        /* hover पर zoom effect */
+    }
+</style>
 </head>
 
 <body>
